AC_PREREQ(2.53)
AC_INIT(today, 0.1, http://www.openedhand.com/)
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR(src/today-main.c)
AM_CONFIG_HEADER(src/config.h)
AM_MAINTAINER_MODE

LIBEBOOK_VERSION=1.4.2
LIBECAL_VERSION=1.4.2

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CC_STDC
AC_STDC_HEADERS
AC_PROG_LIBTOOL
AC_PROG_INTLTOOL([0.35.0])

dnl i18n support
GETTEXT_PACKAGE=AC_PACKAGE_NAME
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Gettext package])
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

PKG_CHECK_MODULES(TODAY,
                  libebook-1.2 >= $LIBEBOOK_VERSION
                  libecal-1.2 >= $LIBEBOOK_VERSION)


if test x$TODAY_DEVEL != x ; then
    CFLAGS="-Wall -Wextra -Wshadow -Wpointer-arith -g"
fi

AC_OUTPUT([
Makefile
po/Makefile.in
src/Makefile
])

